--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "~4.4.0",
     "redis": "~0.10.3",
-    "jade": "~1.3.1"
+    "jade": "~1.3.1",
+    "socket.io": "~1.0.3"
   }
 }
